# server/docs/swagger.yaml
@@ -643,6 +643,14 @@ definitions:
         description: 用户名
         type: string
     type: object
+  request.DownLoadFileRequest:
+    properties:
+      file:
+        type: string
+      id:
+        description: 主键ID
+        type: number
+    type: object
   request.Empty:
     type: object
   request.ExcelInfo:
@@ -670,6 +678,16 @@ definitions:
       id:
         description: 主键ID
         type: number
+      page:
+        description: 页码
+        type: integer
+      pageSize:
+        description: 每页大小
+        type: integer
+      sortBy:
+        type: string
+      sortInverted:
+        type: boolean
     type: object
   request.GetByProjectId:
     properties:
@@ -1296,6 +1314,9 @@ definitions:
       description:
         description: task描述
         type: string
+      executeType:
+        description: 模板类型 0 普通 1 日志提取
+        type: integer
       id:
         description: 主键ID
         type: integer
@@ -1304,6 +1325,9 @@ definitions:
       lastTaskId:
         description: 最后一次task id
         type: integer
+      logPath:
+        description: 日志位置
+        type: string
       mode:
         description: 执行方式 1 命令 2 脚本
         type: integer
@@ -4644,6 +4668,29 @@ paths:
       summary: 批量删除Template
       tags:
       - Template
+  /task/template/downloadFile:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: id,文件路径
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.DownLoadFileRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"更新成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 下载文件
+      tags:
+      - Template
   /task/template/downloadScript:
     get:
       consumes:
@@ -4665,6 +4712,29 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 下载script
+      tags:
+      - Template
+  /task/template/getFileList:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 模板id
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.GetById'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"更新成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 获取文件列表
       tags:
       - Template
   /task/template/getSetById:
