# server/router/taskRoute/task.go
@@ -40,6 +40,8 @@ func (s *TaskRouter) InitTaskRouter(Router *gin.RouterGroup) (R gin.IRoutes) {
 		taskRouter.POST("template/checkScript", authorityTemplateApi.CheckScript)         // 分页获取管理员列表
 		taskRouter.POST("template/uploadScript", authorityTemplateApi.UploadScript)       // 分页获取管理员列表
 		taskRouter.POST("template/downloadScript", authorityTemplateApi.DownloadScript)   // 分页获取管理员列表
+		taskRouter.POST("template/getFileList", authorityTemplateApi.GetFileList)         // 获取管理员
+		taskRouter.GET("template/downloadFile", authorityTemplateApi.DownloadFile)       // 获取管理员
 	}
 	{
 		taskRouter.POST("template/addSet", authorityTemplateApi.AddSet)                 // 新增管理员
